[package]
name = "sherwood"
version = "0.1.0"
authors = ["Valerii Hiora <valerii.hiora@gmail.com>"]
license = "MIT"
description = "ForestDB bindings"
repository = "https://github.com/vhbit/sherwood"
documentation = "http://vhbit.github.io/sherwood/sherwood"
keywords = ["db", "database", "key-value", "forestdb", "kvs"]

[dependencies.libforestdb-sys]
path = "libforestdb-sys"

[dependencies]
bitflags = "0.1"
log = "= 0.1.9"
regex = "= 0.1.10"
