[package]
name = "libforestdb-sys"
version = "0.0.1"
authors = ["Valerii Hiora <valerii.hiora@gmail.com>"]
links = "forestdb"
license = "MIT"
description = "ForestDB native lib"
repository = "https://github.com/vhbit/sherwood"
build = "src/build.rs"

[lib]
name = "libforestdb-sys"
path = "src/lib.rs"
