[package]
name = "libforestdb-sys"
version = "0.1.0"
authors = ["Valerii Hiora <valerii.hiora@gmail.com>"]
links = "forestdb"
license = "MIT"
description = "ForestDB native lib"
repository = "https://github.com/vhbit/sherwood"
build = "src/build.rs"

[lib]
name = "libforestdb_sys"
path = "src/lib.rs"

[dependencies]
libc = "0.1.8"
